PR002-39 fix code overflow

--- a/src/shared/components/StyledContent/StyledContent.less
+++ b/src/shared/components/StyledContent/StyledContent.less
@@ -126,6 +126,7 @@
     color: @c-background;
     background: @c-base;
     border-radius: 4px;
+    overflow-x: scroll;
 
     code {
       white-space: pre;
